--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
       </div>
     </div>
   </nav>
+  <section id="profile">
+    <div class="section__pic-container">
+      <img src="./assets/cv pic.jpeg" alt="Steven Polo profile picture">
+    </div>
+    <div class="section__text">
+      <p class="section__text__p1">Hello, I´m</p>
+      <h1 class="title">Steven Polo Boyd</h1>
+      <p class="section__text__p2">Full Stack Blockchain Developer</p>
+      <div class="btn-container">
+        <button class="btn btn-color-2" onclick="window.open('./assets/Steven Polo Boyd_2024.pdf')">Download CV</button>
+        <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+      </div>
+      <div id="socials-container">
+        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/steven-polo-developer/'">
+        <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/FiboPolo'">
+      </div>
+    </div>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
