--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
       </div>
     </div>
   </section>
+  <section id="about">
+    <p class="section__text__p1">Get To Know More</p>
+    <h1 class="title">About Me</h1>
+    <div class="section-container">
+      <div class="section__pic-container">
+        <img src="./assets/AI github pic.jpeg" alt="Profile Picture" class="about-pic">
+      </div>
+      <div class="about-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <img src="" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
