--- a/index.html
+++ b/index.html
@@ -63,13 +63,119 @@
       <div class="about-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <img src="" alt="">
+            <img src="./assets/experience.png" alt="Experience icon" class="icon">
+            <h3>Experience</h3>
+            <p>Front & Backend Development <br>Blockchain, Web3 & Cryptocurrencies</p>
+          </div>
+          <div class="details-container">
+            <img src="./assets/education.png" alt="Education icon" class="icon">
+            <h3>Education</h3>
+            <p>Full Stack Developer, <br>Blockchain Technology.</p>
+          </div>
+        </div>
+        <div class="text-container">
+          <p>
+            · Passionate and curious full-stack developer
+            with a drive for learning new technologies. I
+            thrive in collaborative environments, working
+            with teams to create user-friendly web
+            applications.
+          </p>
+        </div>
+      </div>
+    </div>
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
+  </section>
+  <section id="experience">
+    <p class="section__text__p1">Explore My</p>
+    <h1 class="title">Experience</h1>
+    <div class="experience-details-container">
+      <div class="about-containers">
+        <div class="details-container">
+          <h2 class="experience-sub-title">Frontend Development</h2>
+          <div class="article-container">
+            <article>
+              <img 
+              src="./assets/checkmark.png" 
+              alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>HTML</h3>
+              </div>
+            </article>
+            <article>
+              <img 
+              src="./assets/checkmark.png" 
+              alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>CSS</h3>
+              </div>
+            </article>
+            <article>
+              <img 
+              src="./assets/checkmark.png" 
+              alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>JavaScript</h3>
+              </div>
+            </article>
+            <article>
+              <img 
+              src="./assets/checkmark.png" 
+              alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>React</h3>
+              </div>
+            </article>
+          </div>
+        </div>
+        <div class="details-container">
+          <h2 class="experience-sub-title">Backend Development</h2>
+          <div class="article-container">
+            <article>
+              <img 
+              src="./assets/checkmark.png" 
+              alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>Git</h3>
+              </div>
+            </article>
+            <article>
+              <img 
+              src="./assets/checkmark.png" 
+              alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>Express JS</h3>
+              </div>
+            </article>
+            <article>
+              <img 
+              src="./assets/checkmark.png" 
+              alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>MongoDB</h3>
+              </div>
+            </article>
+            <article>
+              <img 
+              src="./assets/checkmark.png" 
+              alt="Experience icon"
+              class="icon">
+              <div>
+                <h3>API</h3>
+              </div>
+            </article>
           </div>
         </div>
       </div>
     </div>
-
-
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
   </section>
   <script src="script.js"></script>
 </body>
