--- a/index.html
+++ b/index.html
@@ -177,6 +177,37 @@
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
   </section>
+  <section id="projects">
+    <p class="section__text__p1">Browse My Recent</p>
+    <h1 class="title">Projects</h1>
+    <div class="experience-details-container">
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img src="./assets/Proj1.jpg" alt="Project 1" class="project-img">
+        </div>
+        <h2 class="experience-sub-title-project-title">Project One</h2>
+        <div class="button-container">
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/FiboPolo/Musigen'">Github
+          </button>
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://musigen.adaptable.app/'">Deploy
+          </button>
+        </div>
+      </div>
+      <div class="details-container color-container">
+        <div class="article-container">
+          <img src="./assets/PRoj2.jpg" alt="Project 2" class="project-img">
+        </div>
+        <h2 class="experience-sub-title-project-title">Project Two</h2>
+        <div class="button-container">
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ncontin/M3-Project-Front'">Github
+          </button>
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https://cosmic-moxie-da84fb.netlify.app/'">Deploy
+          </button>
+        </div>
+      </div>
+    </div>
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
