--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
     <p class="section__text__p1">Browse My Recent</p>
     <h1 class="title">Projects</h1>
     <div class="experience-details-container">
-      <div class="details-container color-container">
-        <div class="article-container">
+      <div class="about-containers">
+        <div class="details-container color-container">
+          <div class="article-container">
           <img src="./assets/Proj1.jpg" alt="Project 1" class="project-img">
         </div>
         <h2 class="experience-sub-title-project-title">Project One</h2>
@@ -192,22 +193,51 @@
           <button class="btn btn-color-2 project-btn" onclick="location.href='https://musigen.adaptable.app/'">Deploy
           </button>
         </div>
-      </div>
-      <div class="details-container color-container">
+        </div>
+        <div class="details-container color-container">
         <div class="article-container">
           <img src="./assets/PRoj2.jpg" alt="Project 2" class="project-img">
         </div>
         <h2 class="experience-sub-title-project-title">Project Two</h2>
-        <div class="button-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ncontin/M3-Project-Front'">Github
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https://cosmic-moxie-da84fb.netlify.app/'">Deploy
-          </button>
+          <div class="button-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ncontin/M3-Project-Front'">Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://cosmic-moxie-da84fb.netlify.app/'">Deploy
+            </button>
+          </div>
         </div>
+        
       </div>
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
   </section>
+  <section class="contact">
+    <p class="section__text__p1">Get in Touch</p>
+    <h1 class="title">Contact Me</h1>
+    <div class="contact-info-upper-container">
+      <div class="contact-info-container">
+        <img src="./assets/email.png" alt="Email icon" class="icon conttact-icon">
+        <p><a href="mailto:spoloboyd@gmail.com">spoloboyd@gmail.com</a></p>
+      </div>
+      <div class="contact-info-container">
+        <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon conttact-icon">
+        <p><a href="https://www.linkedin.com/in/steven-polo-developer/">LinkedIn</a></p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <nav>
+      <div class="nav-links-container">
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <p>Copyright &#169; </p>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
