--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
         <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/PRoj2.jpg" alt="Project 2" class="project-img">
+          <img src="./assets/Proj2.2.jpg" alt="Project 2" class="project-img">
         </div>
         <h2 class="experience-sub-title-project-title">Project Two</h2>
           <div class="button-container">
@@ -236,7 +236,7 @@
         </ul>
       </div>
     </nav>
-    <p>Copyright &#169; </p>
+    <p>Copyright &#169 2024 Steven Polo. All Rights Reserved.</p>
   </footer>
   <script src="script.js"></script>
 </body>
