--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
     <h1 class="title">Contact Me</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
-        <img src="./assets/email.png" alt="Email icon" class="icon conttact-icon">
+        <img src="./assets/email.png" alt="Email icon" class="icon contact-icon">
         <p><a href="mailto:spoloboyd@gmail.com">spoloboyd@gmail.com</a></p>
       </div>
       <div class="contact-info-container">
-        <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon conttact-icon">
+        <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon">
         <p><a href="https://www.linkedin.com/in/steven-polo-developer/">LinkedIn</a></p>
       </div>
     </div>
